<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".MainActivity3">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Registro"
        android:id="@+id/texto"
        android:textColor="@color/white"
        android:textSize="20dp"

        />

    <ImageView
        android:id="@+id/imajen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/texto"
        android:layout_marginTop="11dp"
        android:layout_marginBottom="10dp"
        android:src="@drawable/ic_undraw_cabin_hkfr"
        android:layout_centerHorizontal="true">

    </ImageView>

    <EditText
        android:id="@+id/txt1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imajen"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="#FBFBFB"
        android:hint="@string/label_nombre"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <EditText
        android:id="@+id/txt2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt1"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="#FFFFFF"
        android:hint="@string/label_apellido"
        android:inputType="text"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <EditText
        android:id="@+id/txt3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt2"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="#FFFFFF"
        android:hint="@string/label_correo"
        android:inputType="text"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <EditText
        android:id="@+id/txt4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt3"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="#FFFFFF"
        android:hint="@string/label_contrase_a"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <EditText
        android:id="@+id/txt5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt4"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="#FFFFFF"
        android:hint="@string/label_confirmacion_contrase_a"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_registrase"
        android:layout_below="@id/txt5"
        android:backgroundTint="#FF6363"
        android:layout_centerHorizontal="true"
        android:layout_marginRight="20dp"
        />


</RelativeLayout>